--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,14 @@ plugins {
 android {
     compileSdkVersion 31
 
+    viewBinding{
+        enabled = true
+    }
+
     defaultConfig {
         applicationId "com.example.risingcamp"
         minSdkVersion 16
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
