2주차 과제 - (포켓CU) - bottom_nav, fragment연결, home

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <activity android:name=".second_week_practice.SecondActivity"></activity>
         <activity android:name=".second_week_practice.MainActivity2"></activity>
 
-        <activity android:name=".CU_bottom_nav"></activity>
+        <activity android:name=".CU_bottom_nav" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
 
 
 
