--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name=".CU_complete_signup" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
         <activity android:name=".CU_setting" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
         <activity android:name=".CU_onebarcode" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity android:name=".CU_event_roulette" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
 
         <activity android:name=".third_week_practice.MainActivity"></activity>
 
