--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RisingCamp">
 
-        <activity android:name=".CU_splash"
+        <activity android:name=".second_third_week.CU_splash"
                   android:theme="@style/Theme.AppCompat.Light.NoActionBar"
                   android:exported="true">
             <intent-filter>
@@ -28,18 +28,18 @@
         <activity android:name=".second_week_practice.SecondActivity"></activity>
         <activity android:name=".second_week_practice.MainActivity2"></activity>
 
-        <activity android:name=".CU_bottom_nav" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
-        <activity android:name=".CU_login" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
-        <activity android:name=".CU_before_signup" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
-        <activity android:name=".CU_selfauth" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
-        <activity android:name=".CU_selfauth_check" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
-        <activity android:name=".CU_signup" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
-        <activity android:name=".CU_complete_signup" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
-        <activity android:name=".CU_setting" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
-        <activity android:name=".CU_onebarcode" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
-        <activity android:name=".CU_event_roulette" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
-        <activity android:name=".CU_membership_card" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
-        <activity android:name=".CU_user_update" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity android:name=".second_third_week.CU_bottom_nav" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity android:name=".second_third_week.CU_login" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity android:name=".second_third_week.CU_before_signup" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity android:name=".second_third_week.CU_selfauth" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity android:name=".second_third_week.CU_selfauth_check" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity android:name=".second_third_week.CU_signup" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity android:name=".second_third_week.CU_complete_signup" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity android:name=".second_third_week.CU_setting" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity android:name=".second_third_week.CU_onebarcode" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity android:name=".second_third_week.CU_event_roulette" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity android:name=".second_third_week.CU_membership_card" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity android:name=".second_third_week.CU_user_update" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
 
         <activity android:name=".third_week_practice.MainActivity"></activity>
 
