--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RisingCamp">
 
-        <activity android:name=".week3_hw.CU_splash"
+        <activity android:name=".week4_pt.MainActivity2"
                   android:theme="@style/Theme.AppCompat.Light.NoActionBar"
                   android:exported="true">
             <intent-filter>
@@ -28,6 +28,7 @@
         <activity android:name=".week2_pt.SecondActivity"></activity>
         <activity android:name=".week2_pt.MainActivity2"></activity>
 
+        <activity android:name=".week3_hw.CU_splash" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
         <activity android:name=".week3_hw.CU_bottom_nav" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
         <activity android:name=".week3_hw.CU_login" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
         <activity android:name=".week3_hw.CU_before_signup" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
@@ -42,6 +43,8 @@
         <activity android:name=".week3_hw.CU_user_update" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
 
         <activity android:name=".week3_pt.MainActivity"></activity>
+
+        <activity android:name=".week4_pt.MainActivity"></activity>
 
 
     </application>
